--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,6 +15,10 @@ RewriteRule ^.*$ - [NC,L]
 #RewriteRule ^index/intro intro.html [NC,L]
 RewriteRule ^(.*)$ index.php/$1 [NC,L]
 
+#php_value display_errors 1
+#php_value display_startup_errors 1
+#php_value error_reporting E_ALL
+
 
 
 
